build/log/idf_py_stderr_output_25313
Command: make -j 6 all
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:21:5: warning: missing initializer for member 'ledc_timer_config_t::deconfigure' [-Wmissing-field-initializers]
   21 |     };
      |     ^
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:30:5: warning: missing initializer for member 'ledc_channel_config_t::sleep_mode' [-Wmissing-field-initializers]
   30 |     };
      |     ^
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:30:5: warning: missing initializer for member 'ledc_channel_config_t::flags' [-Wmissing-field-initializers]
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp: In member function 'void MotorDC::ler_encoder()':
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:51:15: warning: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   51 |         this->posi++;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:55:15: warning: '--' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   55 |         this->posi--;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:59:15: warning: '--' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   59 |         this->posi--;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:63:15: warning: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   63 |         this->posi++;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp: In member function 'void MotorDC::ler_encoder()':
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:51:15: warning: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   51 |         this->posi++;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:55:15: warning: '--' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   55 |         this->posi--;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:59:15: warning: '--' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   59 |         this->posi--;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/MotorDC/MotorDC.cpp:63:15: warning: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   63 |         this->posi++;
      |         ~~~~~~^~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/main/main.cpp: In function 'void app_main()':
/home/arthur/Projects/DROID/TREKKING-2024-2025/main/main.cpp:8:19: error: 'LEDC_MODE' was not declared in this scope
    8 |     ledc_set_duty(LEDC_MODE, LEDC_CHANNEL, LEDC_DUTY);
      |                   ^~~~~~~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/main/main.cpp:8:30: error: 'LEDC_CHANNEL' was not declared in this scope; did you mean 'LEDC_CHANNEL_7'?
    8 |     ledc_set_duty(LEDC_MODE, LEDC_CHANNEL, LEDC_DUTY);
      |                              ^~~~~~~~~~~~
      |                              LEDC_CHANNEL_7
/home/arthur/Projects/DROID/TREKKING-2024-2025/main/main.cpp:8:44: error: 'LEDC_DUTY' was not declared in this scope
    8 |     ledc_set_duty(LEDC_MODE, LEDC_CHANNEL, LEDC_DUTY);
      |                                            ^~~~~~~~~
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:21:5: warning: missing initializer for member 'ledc_timer_config_t::deconfigure' [-Wmissing-field-initializers]
   21 |     };
      |     ^
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:30:5: warning: missing initializer for member 'ledc_channel_config_t::sleep_mode' [-Wmissing-field-initializers]
   30 |     };
      |     ^
/home/arthur/Projects/DROID/TREKKING-2024-2025/components/PinConfig/PinConfig.cpp:30:5: warning: missing initializer for member 'ledc_channel_config_t::flags' [-Wmissing-field-initializers]
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:5761: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
